# DenoSerialPort

./: mod.ts  read.js  run.bat  test.ts
native/: Cargo.toml
native/src/: lib.rs
src/: ops.ts  serial_port.ts
