[package]
name = "native"
version = "0.1.0"
authors = ["DjDeveloperr <djdeveloperr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
deno_core = "0.75.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]